# OnSpeed-Gen3

./: .clangd  .gitignore  .gitmodules  CNAME  Dockerfile.coverage  NEXT_STEPS.md  README.md  codecov.yml  package.json  platformio.ini  versions.json
.claude/: settings.local.json
ekfq_pipeline/: .gitignore  README.md  clean_and_interpolate.py  pyproject.toml  run_host_main.py  tune_ekf.py
ekfq_pipeline/analysis/: run_best.py
ekfq_pipeline/onspeed_ekf/: __init__.py  _generated_jacobians.py  data.py  ekf_quat.py  jax_model.py  pipeline_quat.py  symbolic.py
ekfq_pipeline/studies/: ekfq_v15.db
ekfq_pipeline/tests/: test_cpp_python_parity.py  test_exp_map_twin.py  test_jacobian_oracle.py
software/Libraries/onspeed_core/: AOACalculator.cpp  AOACalculator.h  BoomConvert.cpp  BoomConvert.h  CMakeLists.txt  CurveCalc.cpp  CurveCalc.h  EKF6.cpp  EKF6.h  EMAFilter.h  KalmanFilter.cpp  KalmanFilter.h  MadgwickFusion.cpp  MadgwickFusion.h  OnSpeedTypes.h  SavGolDerivative.h  ToneCalc.cpp  ToneCalc.h  library.json  library.properties  onspeed_core
software/Libraries/onspeed_core/ahrs/: EKF6.cpp  KalmanFilter.cpp
software/Libraries/onspeed_core/aoa/: AOACalculator.cpp
software/Libraries/onspeed_core/filters/: EMAFilter.h
software/Libraries/onspeed_core/proto/: LogCsv.cpp
software/Libraries/onspeed_core/sensors/: OatConvert.cpp  PressureConvert.cpp  PressureConvert.h
software/Libraries/onspeed_core/src/: onspeed_core.h
software/Libraries/onspeed_core/src/aero/: WindTriangle.cpp  WindTriangle.h
software/Libraries/onspeed_core/src/ahrs/: Ahrs.cpp  Ahrs.h  EKF6.cpp  EKF6.h  EKFQ.cpp  EKFQ.h  EKFQ_jacobians.generated.h  Ekf6Pipeline.cpp  Ekf6Pipeline.h  EkfqConfigKv.cpp  EkfqConfigKv.h  EkfqPipeline.cpp  EkfqPipeline.h  KalmanFilter.cpp  KalmanFilter.h  Madgwick.cpp  Madgwick.h  MadgwickFusion.cpp  MadgwickFusion.h
software/Libraries/onspeed_core/src/aoa/: AOACalculator.h  CurveCalc.h  DisplayPctAnchors.cpp  DisplayPctAnchors.h  PercentLift.cpp  PercentLift.h
software/Libraries/onspeed_core/src/api/: CalwizSave.cpp  CalwizSave.h  CalwizSaveParse.cpp  CalwizSaveParse.h  CalwizStateJson.cpp  CalwizStateJson.h  LiveDataJsonKeys.h  SensorBiasesJson.cpp  SensorBiasesJson.h
software/Libraries/onspeed_core/src/audio/: AudioMixer.cpp  AudioMixer.h  AudioOrchestrator.cpp  AudioOrchestrator.h  AudioTestSweep.cpp  AudioTestSweep.h  Envelope.cpp  Envelope.h  GLimitDecision.cpp  GLimitDecision.h  Panning.cpp  Panning.h  ToneCalc.cpp  ToneCalc.h  ToneSynth.cpp  ToneSynth.h  VnoChimeDecision.cpp  VnoChimeDecision.h  VolumeCurve.cpp  VolumeCurve.h  WavDecode.cpp  WavDecode.h
software/Libraries/onspeed_core/src/boom/: BoomParser.cpp  BoomParser.h
software/Libraries/onspeed_core/src/config/: ConfigV1Parse.cpp  ConfigV1Parse.h  ConfigXmlEmit.cpp  ConfigXmlEmit.h  ConfigXmlParse.cpp  ConfigXmlParse.h  OnSpeedConfig.cpp  OnSpeedConfig.h
software/Libraries/onspeed_core/src/efis/: DynonD10.cpp  DynonD10.h  DynonSkyview.cpp  DynonSkyview.h  EfisParser.cpp  EfisParser.h  FastParse.h  GarminG3X.cpp  GarminG3X.h  GarminG5.cpp  GarminG5.h  MglBinary.cpp  MglBinary.h  OatSelect.cpp  OatSelect.h  Vn300.cpp  Vn300.h
software/Libraries/onspeed_core/src/filters/: AdaptiveEmaFilter.h  GOnsetFilter.cpp  GOnsetFilter.h  RateAdjustedAccelEma.h  RunningMean.h  RunningMedian.h
software/Libraries/onspeed_core/src/gauges/: ArcGeometry.cpp  ArcGeometry.h  BarRangeScale.cpp  BarRangeScale.h  FlapWidgetMath.h  GaugeState.h  TickLayout.cpp  TickLayout.h
software/Libraries/onspeed_core/src/log/: ConsumeAlignedWrite.cpp  ConsumeAlignedWrite.h  LogMeta.h  LogMetaBuilder.cpp  LogMetaBuilder.h  LogMetaFile.cpp  LogMetaFile.h
software/Libraries/onspeed_core/src/proto/: Crc8.h  CsvHeaderMatch.h  DisplaySerial.cpp  DisplaySerial.h  LogCsv.cpp  LogCsv.h  LogCsvHeaderIndex.cpp  LogCsvHeaderIndex.h
software/Libraries/onspeed_core/src/replay/: LogReplayEngine.cpp  LogReplayEngine.h  LogReplayTask.cpp  LogReplayTask.h  LogRowToAhrsInputs.cpp  LogRowToAhrsInputs.h
software/Libraries/onspeed_core/src/sensors/: Ds18b20Decode.h  FlapsDetector.cpp  FlapsDetector.h  IasAlive.h  OatConvert.h  PressureConvert.cpp  PressureConvert.h  SatCorrect.cpp  SatCorrect.h  SpinDetector.cpp  SpinDetector.h
software/Libraries/onspeed_core/src/test_frames/: SynthFrames.cpp  SynthFrames.h
software/Libraries/onspeed_core/src/types/: AhrsInputs.h  AhrsOutputs.h  AirDataValid.h  EfisFrame.h  FlapState.h  LogRow.h  SensorSample.h
software/Libraries/onspeed_core/src/util/: Crc.h  OnSpeedTypes.h  Perf.cpp  Perf.h  SnapshotPublisher.h
software/Libraries/onspeed_core/src/web/: ConfigPage.cpp  ConfigPage.h  WebSchema.h
software/Libraries/onspeed_core/types/: AhrsOutputs.h  AudioFrame.h  EfisFrame.h  ImuSample.h  LogRow.h  SensorSample.h
software/Libraries/onspeed_core/wasm/: .gitignore  bindings.cpp  build_wasm.sh
software/Libraries/tinyxml2/: CMakeLists.txt  library.json
software/Libraries/version/: CMakeLists.txt  buildinfo_default.cpp  library.properties
software/OnSpeed-XPlane-Plugin/: CLAUDE.md  CMakeLists.txt  CREDITS.md  README.md
software/OnSpeed-XPlane-Plugin/SDK/Libraries/Lin/: .gitignore
software/OnSpeed-XPlane-Plugin/examples/: EngineStarter.cpp  OpenAL-Example.cpp
software/OnSpeed-XPlane-Plugin/scripts/: install_dev.sh
software/OnSpeed-XPlane-Plugin/src/: aoa_audio.cpp  serial_port.cpp  serial_port.h
software/OnSpeed-XPlane-Plugin/src/m5_indexer/: AutoSetpoints.cpp  AutoSetpoints.h  DataRefAdapter.cpp  DataRefAdapter.h  Indexer3DPlacement.cpp  Indexer3DPlacement.h  IndexerWindow.cpp  IndexerWindow.h  Panel_PluginCanvas.cpp  Panel_PluginCanvas.h  PercentLiftFill.cpp
software/OnSpeed-XPlane-Plugin/tests/: CMakeLists.txt  auto_setpoints.cpp  band_edge_iasvalid.cpp  iasground_pct.cpp  indexer_3d_placement.cpp  legacy_json_parse.cpp  tone_characterization.cpp
tools/cmake-smoke/: .gitignore  CMakeLists.txt  smoke.cpp
tools/simconnect-spike/: CMakeLists.txt  README.md
tools/simconnect-spike/SDK/: .gitkeep
tools/simconnect-spike/cmake/: cross-win64.cmake
tools/simconnect-spike/src/: main.cpp
(+1577 files in other folders)
